[gd_scene load_steps=4 format=3 uid="uid://bsyyqedsi8il8"]

[ext_resource type="Script" path="res://scripts/interactables/button.gd" id="1_rlorl"]

[sub_resource type="BoxShape3D" id="BoxShape3D_vr0lf"]
size = Vector3(1.60342, 1.00027, 1.5896)

[sub_resource type="ViewportTexture" id="ViewportTexture_drfv7"]
viewport_path = NodePath("ButtonText/SubViewport2")

[node name="ButtonActivate" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00952846, -1.97042)
script = ExtResource("1_rlorl")

[node name="Button" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.97274)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Button"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.815483, 0.86514)
layers = 4

[node name="Area3D" type="Area3D" parent="Button"]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Button/Area3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -0.002, 0.805, 0.564833)
shape = SubResource("BoxShape3D_vr0lf")

[node name="ButtonText" type="Sprite3D" parent="."]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 2.059, 1)
visible = false
pixel_size = 0.005
billboard = 1
texture = SubResource("ViewportTexture_drfv7")

[node name="SubViewport2" type="SubViewport" parent="ButtonText"]
transparent_bg = true
size = Vector2i(63, 25)

[node name="Label" type="Label" parent="ButtonText/SubViewport2"]
offset_right = 40.0
offset_bottom = 23.0
text = " Press E "

[connection signal="body_entered" from="Button/Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Button/Area3D" to="." method="_on_area_3d_body_exited"]
